Fix unreadable panels

--- a/stylesheets/cms.css
+++ b/stylesheets/cms.css
@@ -709,6 +709,7 @@ div.alert-box a.close:hover, div.alert-box a.close:focus { opacity: 0.4; }
 .panel > :last-child { margin-bottom: 0; }
 .panel.callout { background: #6a3996; color: #fff; border-color: #502b71; }
 .panel.callout a { color: #fff; }
+.panel.callout h5 { color: #fff; }
 .panel.callout .button { background: white; border: none; color: #6a3996; text-shadow: none; }
 .panel.callout .button:hover { background: rgba(255, 255, 255, 0.8); }
 .panel.radius { -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
